ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Aadhar_OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_OTP_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aadhar OTP Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>