ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Accept_Assigned_Module__c.field-meta.xml
<CustomField>
    <fullName>Accept_Assigned_Module__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Assigned Module</label>
    <type>Checkbox</type>
</CustomField>