ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Accept_Link__c.field-meta.xml
<CustomField>
    <fullName>Accept_Link__c</fullName>
    <formula>IF(ISPICKVAL($User.UserType, &apos;PowerPartner&apos;), HYPERLINK(&quot;/s/accept-cvo?c__recordId=&quot;+Id, &quot;Click to change owner&quot;, &quot;_self&quot;), HYPERLINK(&quot;/lightning/cmp/c__linkHomePage?c__recordId=&quot;+Id, &quot;Click to change owner&quot;, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept Link</label>
    <type>Text</type>
</CustomField>