ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Account_Name_Custom__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Custom__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>