ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Acre_Category__c.field-meta.xml
<CustomField>
    <fullName>Acre_Category__c</fullName>
    <label>Acre Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt; 2.5 acres to 5 acres - individual</fullName>
            </value>
            <value>
                <fullName>upto 2.5 acres - individual</fullName>
            </value>
            <value>
                <fullName>Tenant Farmers/ Sharecroppers/ Oral lessees -  no own land</fullName>
            </value>
            <value>
                <fullName>Other (Medium and Large) - &gt; 5 acres - individual</fullName>
            </value>
            <value>
                <fullName>Other borrowers engaged in agriculture and allied activities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>