ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Agent_BL_code__c.field-meta.xml
<CustomField>
    <fullName>Agent_BL_code__c</fullName>
    <label>Agent BL code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>