ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/agentId__c.field-meta.xml
<CustomField>
    <fullName>agentId__c</fullName>
    <label>agentId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>