ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Aggregator_Source__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Source__c</fullName>
    <label>Aggregator Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>