ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/aggregatorReferenceId__c.field-meta.xml
<CustomField>
    <fullName>aggregatorReferenceId__c</fullName>
    <description>This field will be used in D2C Aggregator journey to store unique identifier for aggregator</description>
    <label>aggregatorReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>