ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/All_Cheques_are_from_Same_bank__c.field-meta.xml
<CustomField>
    <fullName>All_Cheques_are_from_Same_bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Cheques are from Same bank</label>
    <type>Checkbox</type>
</CustomField>