ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/AML_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>AML_Check_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AML Check Completed  or not</description>
    <label>AML Check Completed</label>
    <type>Checkbox</type>
</CustomField>