ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/AML_Check_status__c.field-meta.xml
<CustomField>
    <fullName>AML_Check_status__c</fullName>
    <description>AML Approved or Not Checks</description>
    <label>AML Check status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>