ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>