ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Applicant_ETC__c.field-meta.xml
<CustomField>
    <fullName>Applicant_ETC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value will come from D2C in case of pre approved journey</description>
    <label>Applicant_ETC</label>
    <type>Checkbox</type>
</CustomField>