ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Name__c</fullName>
    <label>Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>