ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Application_number__c.field-meta.xml
<CustomField>
    <fullName>Application_number__c</fullName>
    <label>Application number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>