ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Application_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Application_Sequence__c</fullName>
    <label>Application Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>