ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Application_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Sequence_Number__c</fullName>
    <description>For generating application number sequence</description>
    <label>Application Sequence Number</label>
    <type>AutoNumber</type>
</CustomField>