ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Approval_of_app_sourced_by_off_roll_emp__c.field-meta.xml
<CustomField>
    <fullName>Approval_of_app_sourced_by_off_roll_emp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Design Document field full name - Approval of application sourced by off roll employee</description>
    <label>Approval of app sourced by off roll emp</label>
    <type>Checkbox</type>
</CustomField>