ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Approval_sourced_by_off_role_emp__c.field-meta.xml
<CustomField>
    <fullName>Approval_sourced_by_off_role_emp__c</fullName>
    <label>Approval sourced by off role emp</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified Original KYC</fullName>
            </value>
            <value>
                <fullName>Self-Attested KYC copy collected</fullName>
            </value>
            <value>
                <fullName>Met the applicant in person</fullName>
            </value>
            <value>
                <fullName>Current Residence FI has been done</fullName>
            </value>
            <value>
                <fullName>Record confirmations and approve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>