ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Assign_Application_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_Application_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign Application To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assigned_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>