ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Assigned_Module__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Module__c</fullName>
    <label>Assigned Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>