ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Back_Upload_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Back_Upload_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Back Upload Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>