ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Bank_Branch_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Branch Detail</label>
    <referenceTo>BankBranchDetails__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>