ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Price__c</fullName>
    <label>Basic Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>