ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/BE_mapping_date__c.field-meta.xml
<CustomField>
    <fullName>BE_mapping_date__c</fullName>
    <description>In D2C this field is used to store the date on which BE or MO was mapped with the loan application</description>
    <label>BE mapping date</label>
    <type>Date</type>
</CustomField>