ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Borrower_Category__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Category__c</fullName>
    <label>Borrower Category</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>