ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Test Picklist to configure key value pair in picklist</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
                <label>SAL  |  SALARIED</label>
            </value>
            <value>
                <fullName>SENP</fullName>
                <label>SENP  |  SELF EMPLOYED NON PROFESSIONAL</label>
            </value>
            <value>
                <fullName>SEP</fullName>
                <label>SEP  |  SELF EMPLOYED PROFESSIONAL</label>
            </value>
            <value>
                <fullName>NE</fullName>
                <label>NE  |  NONEARNING</label>
            </value>
            <value>
                <fullName>NRI</fullName>
                <label>NRI  |  NON RESIDENT INDIAN</label>
            </value>
            <value>
                <fullName>PEN</fullName>
                <label>PEN  |  PENSIONER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>