ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Class_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Activity__c</fullName>
    <label>Class of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Forestry</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Electricy,Gas &amp; water supply</fullName>
            </value>
            <value>
                <fullName>Financial inter mediation</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Health and social work</fullName>
            </value>
            <value>
                <fullName>Hotels and restaurants</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Mining and quearrying</fullName>
            </value>
            <value>
                <fullName>Other comminity,social &amp; Personal</fullName>
            </value>
            <value>
                <fullName>service activities</fullName>
            </value>
            <value>
                <fullName>Public administration and defence</fullName>
            </value>
            <value>
                <fullName>Realestate,renting and business actities</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Whole sales and retail trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>