ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>