ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>