ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/CMU_Rejected_Fields__c.field-meta.xml
<CustomField>
    <fullName>CMU_Rejected_Fields__c</fullName>
    <label>CMU Rejected Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Kyc_Fields</valueSetName>
    </valueSet>
</CustomField>