ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Consent_Received__c.field-meta.xml
<CustomField>
    <fullName>Consent_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent Received</label>
    <type>Checkbox</type>
</CustomField>