ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/CRIFF_Report_Initiated__c.field-meta.xml
<CustomField>
    <fullName>CRIFF_Report_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRIFF Report Initiated</label>
    <type>Checkbox</type>
</CustomField>