ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Current_Exposure_Amt__c.field-meta.xml
<CustomField>
    <fullName>Current_Exposure_Amt__c</fullName>
    <label>Current Exposure Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>