ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Customer_Deal_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deal_No__c</fullName>
    <label>Customer Deal No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>