ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Field used in DSA portal&apos;s list view</description>
    <formula>Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>