ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/CVO_Accepts_SPDC_Documents__c.field-meta.xml
<CustomField>
    <fullName>CVO_Accepts_SPDC_Documents__c</fullName>
    <label>CVO Accepts SPDC Documents</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>