ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/CVO_Remarks_SPDC__c.field-meta.xml
<CustomField>
    <fullName>CVO_Remarks_SPDC__c</fullName>
    <label>CVO Remarks SPDC</label>
    <type>TextArea</type>
</CustomField>