ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/D2C_journey_drop_screen__c.field-meta.xml
<CustomField>
    <fullName>D2C_journey_drop_screen__c</fullName>
    <label>D2C journey drop screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>