ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/D2C_Journey_Status__c.field-meta.xml
<CustomField>
    <fullName>D2C_Journey_Status__c</fullName>
    <description>This field will be populated by D2C portal in case of journey drop of journey is moved to assisted.</description>
    <label>D2C Journey Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial offer drop</fullName>
            </value>
            <value>
                <fullName>Final offer drop</fullName>
            </value>
            <value>
                <fullName>Move to assisted</fullName>
            </value>
            <value>
                <fullName>Journey stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>