ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/D2C_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>D2C_UTM_Medium__c</fullName>
    <label>D2C UTM Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>