ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <description>IndusInd deal number</description>
    <label>Deal Number</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>