ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Dealer_Expence_Reimburse_Type__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Expence_Reimburse_Type__c</fullName>
    <label>Dealer Expence Reimburse Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>