ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Dealer_Expence_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Expence_Reimbursement__c</fullName>
    <label>Dealer Expence Reimbursement %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>