ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Dealer_Quoted_On_Road_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Quoted_On_Road_Price__c</fullName>
    <label>Dealer Quoted On Road Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>