ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Delinquency_Fund__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Fund__c</fullName>
    <label>Delinquency Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>