ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Deliquency_Fund_type__c.field-meta.xml
<CustomField>
    <fullName>Deliquency_Fund_type__c</fullName>
    <label>Deliquency Fund type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>