ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Deviation_Required__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The value of this field is set on the basis of Vehicle Dedupe API response True if the Response is Yes else false</description>
    <label>Deviation Required</label>
    <type>Checkbox</type>
</CustomField>