ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Disbursement_TAT__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_TAT__c</fullName>
    <formula>(Payment_Request_Generation_Date__c - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement TAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>