ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Disbursement_Time__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Time__c</fullName>
    <formula>(Payment_Request_Generation_Date__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disbursement Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>