ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Discount_on_Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_Basic_Price__c</fullName>
    <label>Discount on Basic Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>