ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Document_upload_status__c.field-meta.xml
<CustomField>
    <fullName>Document_upload_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document upload status</label>
    <type>Checkbox</type>
</CustomField>