ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Documentation_Charges__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Charges__c</fullName>
    <label>Documentation Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>