ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_Is_Created_By__c.field-meta.xml
<CustomField>
    <fullName>DSA_Is_Created_By__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Created By</label>
    <type>Checkbox</type>
</CustomField>