ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_isDisbursed__c.field-meta.xml
<CustomField>
    <fullName>DSA_isDisbursed__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <label>isDisbursed?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>