ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>DSA_Lead_Number__c</fullName>
    <formula>HYPERLINK($Label.IND_DSA_Community_URL &amp;&apos;/s/summary-page?loanid=&apos;+ CASESAFEID(Id) ,  Lead_number__c  , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Number</label>
    <type>Text</type>
</CustomField>