ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_Loan_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>DSA_Loan_Application_Name__c</fullName>
    <formula>HYPERLINK( $Label.IND_DSA_Community_URL &amp; &quot;/&quot;&amp; Id, Name,&quot;_SELF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application Name</label>
    <type>Text</type>
</CustomField>