ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_pay__c.field-meta.xml
<CustomField>
    <fullName>DSA_pay__c</fullName>
    <label>DSA pay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>