ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_Stage__c.field-meta.xml
<CustomField>
    <fullName>DSA_Stage__c</fullName>
    <description>Field used internally for DSA portal</description>
    <inlineHelpText>Field used internally for DSA portal</inlineHelpText>
    <label>DSA Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>