ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSA_Sub_Stage__c.field-meta.xml
<CustomField>
    <fullName>DSA_Sub_Stage__c</fullName>
    <defaultValue>&quot;Loan Initiation&quot;</defaultValue>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>