ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/DSM_Incentive1__c.field-meta.xml
<CustomField>
    <fullName>DSM_Incentive1__c</fullName>
    <label>DSM Incentive1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>