ProdIND/ProdPrograms/force-app/main/default/objects/Opportunity/fields/Due_date_shift_charges__c.field-meta.xml
<CustomField>
    <fullName>Due_date_shift_charges__c</fullName>
    <label>Due date shift charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>